[workspace]
resolver = "2"
members = ["crates/gamai", "crates/gamai/macros"]

[workspace.package]
version = "0.1.36"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Peter Hayman <peteyhayman@gmail.com>"]
repository = "https://github.com/mrchantey/gamai"
description = "An ECS task switching library suitable for game AI & robotics"
documentation = "https://mrchantey.github.io/gamai"
categories = ["game-engines", "game-development", "data-structures"]
keywords = [
	"game-ai",
	"robotics",
	"behavior-tree",
	"utility-ai",
	"state-machine",
]

[workspace.dependencies]
gamai = { path = "./crates/gamai", version = "0.*" }
gamai_macros = { path = "./crates/gamai/macros", version = "0.*" }

anyhow = "1.0.75"
petgraph = "0.6.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
typetag = "0.2.14"

bevy_ecs = { version = "0.12.*" }
bevy_app = { version = "0.12.*" }
bevy_time = { version = "0.12.*" }
bevy_utils = { version = "0.12.*" }
bevy_derive = { version = "0.12.*" }


### DEV DEPENDENCIES ###
sweet = { path = "../forky/crates/sweet", version = "0.*", features = [
	"bevy_core",
] }
